Actualiza filtros de busqueda en books
