# src/main/java/com/carlosarroyoam/rest/books/book/dto/BookSpecsDto.java
@@ -1,7 +1,9 @@
 package com.carlosarroyoam.rest.books.book.dto;
 
 import com.carlosarroyoam.rest.books.core.validation.CommaSeparatedLong;
+import jakarta.validation.constraints.DecimalMin;
 import jakarta.validation.constraints.Size;
+import java.math.BigDecimal;
 import lombok.Builder;
 import lombok.Data;
 
@@ -13,6 +15,12 @@ public class BookSpecsDto {
 
   @Size(max = 128, message = "Title should be max 128")
   private String title;
+
+  @DecimalMin(value = "0.0", message = "Min price should be positive")
+  private BigDecimal minPrice;
+
+  @DecimalMin(value = "0.0", message = "Max price should be positive")
+  private BigDecimal maxPrice;
 
   @CommaSeparatedLong(message = "AuthorIds should contain only valid ids")
   private String authorIds;
